[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Scripts/WallpaperVideo.gd" type="Script" id=1]
[ext_resource path="res://Wallpaperanimation0001-0750.webm" type="VideoStream" id=2]
[ext_resource path="res://Resources/UI/Cheese-Sound-Effect.wav" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Scripts/HomeScreen.gd" type="Script" id=4]

[node name="root" type="Node"]

[node name="HomeScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="WallpaperVideo" type="VideoPlayer" parent="HomeScreen"]
anchor_top = -0.014
anchor_right = 1.022
anchor_bottom = 1.014
margin_top = 0.00897217
stream = ExtResource( 2 )
autoplay = true
script = ExtResource( 1 )

[node name="CheeseSoundEffect" type="AudioStreamPlayer" parent="HomeScreen" groups=["SFX"]]
stream = ExtResource( 3 )

[node name="containsExitButton" type="MarginContainer" parent="HomeScreen"]
anchor_left = 0.014
anchor_top = 0.02
anchor_right = 0.049
anchor_bottom = 0.08

[node name="ExitButton" type="Button" parent="HomeScreen/containsExitButton"]
margin_right = 89.0
margin_bottom = 86.0

[node name="containsNavigationButtons" type="MarginContainer" parent="HomeScreen"]
anchor_left = 0.3
anchor_top = 0.56
anchor_right = 0.7
anchor_bottom = 0.78
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="HorizontalLayout" type="HBoxContainer" parent="HomeScreen/containsNavigationButtons"]
margin_right = 1064.0
margin_bottom = 356.0

[node name="SettingsButton" type="Button" parent="HomeScreen/containsNavigationButtons/HorizontalLayout"]
margin_right = 12.0
margin_bottom = 356.0

[node name="PlayButton" type="Button" parent="HomeScreen/containsNavigationButtons/HorizontalLayout"]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 356.0

[node name="CheeseButton" type="Button" parent="HomeScreen/containsNavigationButtons/HorizontalLayout"]
margin_left = 32.0
margin_right = 44.0
margin_bottom = 356.0

[node name="SettingsPopup" type="Popup" parent="."]
visible = true
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85

[node name="Background" type="Panel" parent="SettingsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VerticalLayout" type="VBoxContainer" parent="SettingsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="containsHeader" type="MarginContainer" parent="SettingsPopup/VerticalLayout"]
margin_right = 1792.0
margin_bottom = 14.0

[node name="Header" type="Label" parent="SettingsPopup/VerticalLayout/containsHeader"]
margin_right = 1792.0
margin_bottom = 14.0
text = "Settings"

[node name="Body" type="Control" parent="SettingsPopup/VerticalLayout"]
margin_top = 18.0
margin_right = 1792.0
margin_bottom = 18.0

[node name="containsRenamePlayer" type="MarginContainer" parent="SettingsPopup/VerticalLayout/Body"]
anchor_right = 1.0
anchor_bottom = 0.2

[node name="LineEdit" type="LineEdit" parent="SettingsPopup/VerticalLayout/Body/containsRenamePlayer"]
margin_right = 1792.0
margin_bottom = 24.0
placeholder_text = "Change Name..."

[node name="TableLayoutForSettings" type="GridContainer" parent="SettingsPopup/VerticalLayout/Body"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.8
columns = 2

[node name="Title1" type="MarginContainer" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings"]
margin_right = 72.0
margin_bottom = 16.0

[node name="Label" type="Label" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings/Title1"]
margin_top = 1.0
margin_right = 72.0
margin_bottom = 15.0
text = "Music"

[node name="Option1" type="MarginContainer" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings"]
margin_left = 76.0
margin_right = 138.0
margin_bottom = 16.0

[node name="VolumeSlider" type="HSlider" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings/Option1"]
margin_right = 62.0
margin_bottom = 16.0

[node name="Title2" type="MarginContainer" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings"]
margin_top = 20.0
margin_right = 72.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings/Title2"]
margin_top = 1.0
margin_right = 72.0
margin_bottom = 15.0
text = "SFX"

[node name="Option2" type="MarginContainer" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings"]
margin_left = 76.0
margin_top = 20.0
margin_right = 138.0
margin_bottom = 36.0

[node name="EffectSlider" type="HSlider" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings/Option2"]
margin_right = 62.0
margin_bottom = 16.0

[node name="Title3" type="MarginContainer" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings"]
margin_top = 40.0
margin_right = 72.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings/Title3"]
margin_top = 3.0
margin_right = 72.0
margin_bottom = 17.0
text = "Resolution "

[node name="Option3" type="MarginContainer" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings"]
margin_left = 76.0
margin_top = 40.0
margin_right = 138.0
margin_bottom = 60.0

[node name="SelectResButton" type="OptionButton" parent="SettingsPopup/VerticalLayout/Body/TableLayoutForSettings/Option3"]
margin_right = 62.0
margin_bottom = 20.0
text = "Hallo"

[node name="containsResetSavegame" type="MarginContainer" parent="SettingsPopup/VerticalLayout/Body"]
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button5" type="Button" parent="SettingsPopup/VerticalLayout/Body/containsResetSavegame"]
margin_right = 1792.0
margin_bottom = 20.0
text = "Reset SaveGame"

[connection signal="pressed" from="HomeScreen/containsExitButton/ExitButton" to="HomeScreen" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="HomeScreen/containsNavigationButtons/HorizontalLayout/SettingsButton" to="HomeScreen" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="HomeScreen/containsNavigationButtons/HorizontalLayout/PlayButton" to="HomeScreen" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HomeScreen/containsNavigationButtons/HorizontalLayout/CheeseButton" to="HomeScreen" method="_on_CheeseButton_pressed"]
